--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: checout SubMod
+      run:  git submodule update --init --recursive
     - name: Install Dependencies
       run: |
         wget -q https://github.com/emscripten-core/emsdk/archive/master.tar.gz
