--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: checout SubMod
-      run:  git submodule update --init --recursive
+      run:  |
+        git submodule update --init --recursive
+        git submodule update --remote
     - name: Install Dependencies
       run: |
         tree 
